--- a/main.ipynb
+++ b/main.ipynb
@@ -1381,7 +1381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "-atHWPAuz9YC"
       },
@@ -1392,7 +1392,7 @@
               "True"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1404,9 +1404,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\write\\anaconda3\\envs\\medical-chatbot\\lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from tqdm.autonotebook import tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from langchain.prompts import PromptTemplate\n",
         "from langchain.chains import RetrievalQA\n",
@@ -1416,6 +1425,40 @@
         "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
         "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
         "from langchain.llms import ctransformers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "PINECONE_API_ENV=\"\"\n",
+        "HOST=\"https://medical-chatbot-fn63rwe.svc.aped-4627-b74a.pinecone.io\"\n",
+        "INDEX=\"quickstart\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def load_pdf(data: str):\n",
+        "    loader = DirectoryLoader(data,\n",
+        "                    glob=\"*.pdf\",\n",
+        "                    loader_cls=PyPDFLoader)\n",
+        "    docs = loader.load()\n",
+        "    return docs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "docs = load_pdf()"
       ]
     }
   ],
