--- a/main.ipynb
+++ b/main.ipynb
@@ -140,6 +140,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# update/use the pinecone index with our documents"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -175,55 +182,34 @@
       "outputs": [],
       "source": [
         "#%pip install --upgrade --quiet  langchain-pinecone langchain-openai langchain\n",
-        "from langchain_pinecone import PineconeVectorStore\n",
+        "# from langchain_pinecone import PineconeVectorStore\n",
         "\n",
-        "index_name = \"medical-chatbot2\"\n",
+        "# index_name = \"medical-chatbot2\"\n",
         "\n",
-        "docsearch = PineconeVectorStore.from_existing_index(embedding= embeddings, index_name=index_name)\n"
+        "# docsearch = PineconeVectorStore.from_existing_index(embedding= embeddings, index_name=index_name)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# test the index"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "## Document 0\n",
-            "\n",
-            "thecondition known as allergy, and the offending substanceis called an allergen.\n",
-            "\n",
-            "## Document 1\n",
-            "\n",
-            "condition known as allergy, and the offend-ing substance is called an allergen. Common inhaledallergens include pollen, dust, and insect parts from tinyhouse mites. Common food allergens include nuts, fish,and milk.\n",
-            "\n",
-            "## Document 2\n",
-            "\n",
-            "GALE ENCYCLOPEDIA OF MEDICINE 2 117Allergies\n",
-            "Allergic rhinitis is commonly triggered by\n",
-            "exposure to household dust, animal fur,or pollen. The foreign substance thattriggers an allergic reaction is calledan allergen.\n",
-            "The presence of an allergen causes the\n",
-            "body's lymphocytes to begin producingIgE antibodies. The lymphocytes of an allergy sufferer produce an unusuallylarge amount of IgE.\n",
-            "IgE molecules attach to mast\n",
-            "cells, which contain histamine.HistaminePollen grains\n",
-            "Lymphocyte\n",
-            "FIRST EXPOSURE\n",
-            "\n",
-            "## Document 3\n",
-            "\n",
-            "the itchy, scratchy nose, eyes, and throat common inallergic rhinitis .\n",
-            "The particular allergens to which a person is sensi-\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        " test1 = docsearch.similarity_search(\"allergies\")\n",
-        " for i, d in enumerate(test1):\n",
-        "    print(f\"\\n## Document {i}\\n\")\n",
-        "    print(d.page_content)"
+        "test1 = docsearch.similarity_search(\"allergies\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# create the prompt"
       ]
     },
     {
@@ -244,6 +230,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# create the llm"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 134,
       "metadata": {},
@@ -257,21 +250,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# now... the QARetrivevel didn't work, so I just did the similarity search, and manually combined the results, and sent them to the LLM as context"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 160,
       "metadata": {},
       "outputs": [],
       "source": [
         "from langchain.chains import LLMChain\n",
+        "#the user query:\n",
         "query = \"tell my a few words about allergies\"\n",
+        "\n",
+        "#retrieve the docs from the vector store\n",
         "retriever = docsearch.as_retriever()\n",
         "matched_docs = docsearch.similarity_search(query=  query, k = 3)\n",
+        "\n",
+        "#combine them\n",
         "context = \"\"\n",
         "for i, d in enumerate(test1):\n",
         "    context = context + (f\"\\n## Document {i}\\n\")\n",
         "    context = context + (d.page_content)\n",
         "\n",
-        "chain = LLMChain(llm = llm, prompt = prompt)"
+        "#create the chain\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# create the chain and run it using the user query and the context from the documents"
       ]
     },
     {
@@ -280,6 +292,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "chain = LLMChain(llm = llm, prompt = prompt)\n",
         "result = chain.run(question= query, context= context, verbose = True)"
       ]
     },
