--- a/main.ipynb
+++ b/main.ipynb
@@ -21,15 +21,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%pip install langchain-pinecone"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 118,
       "metadata": {
         "id": "-atHWPAuz9YC"
@@ -50,11 +41,10 @@
       "source": [
         "from langchain.prompts import PromptTemplate\n",
         "from langchain.chains import RetrievalQA\n",
-        "from langchain.embeddings import HuggingFaceEmbeddings\n",
+        "\n",
         "from langchain.vectorstores import Pinecone\n",
         "\n",
-        "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
-        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "\n",
         "from langchain.llms import ctransformers"
       ]
     },
@@ -75,37 +65,16 @@
       "execution_count": 5,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "def load_pdf(directory: str):\n",
-        "    loader = DirectoryLoader(directory,\n",
-        "                    glob=\"*.pdf\",\n",
-        "                    loader_cls=PyPDFLoader)\n",
-        "    docs = loader.load()\n",
-        "    return docs"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 165,
       "metadata": {},
       "outputs": [],
       "source": [
+        "from src.helper import load_pdf\n",
         "docs = load_pdf(directory=\"data/\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def text_split(documents: list):\n",
-        "    splitter = RecursiveCharacterTextSplitter(\n",
-        "        chunk_size = 500,\n",
-        "        chunk_overlap = 50\n",
-        "    )\n",
-        "    chunks = splitter.split_documents(documents=documents)\n",
-        "    return chunks"
       ]
     },
     {
@@ -114,20 +83,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "from src.helper import text_split\n",
         "text_chunks = text_split(docs)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def download_hugging_face_embeddings():\n",
-        "    embeddings = HuggingFaceEmbeddings(\n",
-        "        model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-        "    )\n",
-        "    return embeddings"
       ]
     },
     {
@@ -136,6 +93,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "from src.helper import download_hugging_face_embeddings\n",
         "embeddings = download_hugging_face_embeddings()"
       ]
     },
